# NetLab

./: .gitignore  README.md
Backend/NetLabBuilder/: .gitignore  PCAP_DATABASE_TUTORIAL.md  README.md  TTYD_PORT_MANAGEMENT.md  cleanup_ttyd.py  copy_pcaps.sh  docker-compose.pcap.yml  pyproject.toml  requirements.txt  setup.sh  start_pcap_database.sh  test_pcap.py
Backend/NetLabBuilder/dockerfiles/pcap-database/: Dockerfile  init.sql  my.cnf
Backend/NetLabBuilder/src/: mesh.py  mini_ring.py  ring.py  star.py  tree.py
Backend/NetLabBuilder/src/net_lab_builder/: __init__.py  app.py  config.py  docker_adapter.py  network_controller.py  pcap_converter.py  pcap_parser.py  utils.py
Backend/NetLabBuilder/src/net_lab_builder/components/: frr_conf.py  image.py  network.py  node.py  pcap_merger.py
Backend/NetLabBuilder/src/net_lab_builder/dockerfiles/frr-node/: Dockerfile  frr-reload.py  frr.conf  vtysh.conf
Backend/NetLabBuilder/src/net_lab_builder/routes/: container.py  pcap_database.py  terminal.py  topology.py  validation.py
Backend/NetLabBuilder/src/net_lab_builder/services/: container_service.py  pcap_database_service.py  pcap_parsing_service.py  terminal_service.py  topology_service.py
Backend/NetLabBuilder/src/topologies_by_userid/: mesh_by_user.py  mini_ring_by_user.py  ring_by_user.py  star_by_user.py  tree_by_user.py
Backend/NetLabBuilder/tests/: test_network_connector.py
Frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.vue  main.js
Frontend/src/assets/: base.css  index.css  (+1 more)
Pcap_Parsing/: main.py
(+27 files in other folders)
