[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "net_lab_builder"
version = "0.0.2"
authors = [
  { name="Jan Bär", email="janthebaer@gmail.com" },
]
description = "A tool to build a network lab environment with docker containers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]